<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/relative"
        android:textSize="30sp"
        android:layout_centerHorizontal="true" />
    
    <TextView
        android:id="@+id/loginTitleId"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/title"
        android:textSize="15sp"
        android:layout_below="@id/text"
        android:layout_centerHorizontal="true" />
    <EditText 
        android:id="@+id/usernameId"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/loginTitleId"
        android:inputType="textCapCharacters"
        android:hint="@string/user"
        android:layout_centerHorizontal="true"
        />
    <EditText 
        android:id="@+id/passwordId"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"
        android:layout_below="@id/usernameId"
        android:hint="@string/passwd"
        android:layout_centerHorizontal="true"
        />
    
    <Button 
        android:id="@+id/cancelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordId"
        android:layout_alignRight="@id/passwordId"
        android:onClick="cancel"
        android:text="@string/cancel"/>
    
    <Button 
        android:id="@+id/loginId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordId"
        android:layout_toLeftOf="@id/cancelId"
        android:onClick="login"
        android:text="@string/login"/>"
</RelativeLayout>