<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/linear"
        android:textSize="20sp" />
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        >
        
        <ImageView 
	        android:id="@+id/imageRId"
	        android:layout_weight="1"
	        android:layout_margin="30dp"
	        android:layout_width="100dp"
	        android:layout_height="100dp"
	        android:src="@drawable/ic_launcher"
	        android:scaleType="fitCenter"
	        android:contentDescription="@string/rightImage"
        	/>
        
        <ImageView 
	        android:id="@+id/imageLId"
	        android:layout_weight="1"
	        android:layout_margin="30dp"
	        android:layout_width="100dp"
	        android:layout_height="100dp"
	        android:src="@drawable/ic_launcher"
	        android:scaleType="fitCenter"
	        android:contentDescription="@string/leftImage"
        	/>
        
    </LinearLayout>

    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        >
        
        <RadioGroup 
	        android:id="@+id/radioGroupId1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="40dp"
	        android:layout_marginLeft="5dp"
	        android:layout_weight="1"
	        android:orientation="vertical">
        
	        <RadioButton 
	            android:id="@+id/RadioId1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="15dp"
	             android:layout_gravity="clip_horizontal"
	            android:text="@string/shitou"
	            />
	        
	        <RadioButton 
	            android:id="@+id/RadioId2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"	
	             android:layout_gravity="clip_horizontal"            
	            android:text="@string/jiandao"
	            />
	        <RadioButton 
	            android:id="@+id/RadioId3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"	
	             android:layout_gravity="clip_horizontal"            
	            android:text="@string/bu"
	            />            
   		</RadioGroup>
        
        
        <RadioGroup 
	        android:id="@+id/radioGroupId2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="40dp"
	        android:layout_marginLeft="5dp"
	        android:layout_weight="1"
	        android:orientation="vertical">
        
	        <RadioButton 
	            android:id="@+id/RadioId4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="15dp"
	            android:layout_gravity="center_horizontal"
	            android:text="@string/shitou"
	            />
	        
	        <RadioButton 
	            android:id="@+id/RadioId5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	             android:layout_gravity="center_horizontal"	            
	            android:text="@string/jiandao"
	            />
	        <RadioButton 
	            android:id="@+id/RadioId6"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"	
	             android:layout_gravity="center_horizontal"            
	            android:text="@string/bu"
	            />            
   		</RadioGroup>
        
    </LinearLayout>
    
    
    <Button 
        android:id="@+id/buttonId"
        android:layout_gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button"
        />
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        >
        
      	<TextView
      	    android:id="@+id/text1Id"
      	    android:layout_margin="20dp"
      	    android:layout_width="wrap_content"
      	    android:layout_height="wrap_content"
      	    android:layout_weight="1"
      	    android:text="@string/result"
          />
        <TextView
      	    android:id="@+id/text2Id"
      	    android:layout_margin="20dp"
      	    android:layout_width="wrap_content"
      	    android:layout_height="wrap_content"
      	    android:layout_weight="1"
      	    android:text="@string/testresult"
          />
    </LinearLayout>
    
    
    <Button 
        android:id="@+id/turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn"
        android:onClick="turnToRelative"
        />
</LinearLayout>